test/feature/Syntax/Error_RegExpNotClosed.js
// Should not compile.
// SyntaxError: feature/Syntax/Error_RegExpNotClosed.js:4:2: Expected '/' in regular expression literal

/